--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,13 @@ django = "*"
 djangorestframework = "*"
 python-decouple = "*"
 django-webpack-loader = "*"
+markdown = "*"
+django-filter = "*"
+django-rest-auth = "*"
+django-allauth = "*"
+"psycopg2" = "*"
+"django-rest-framework-social-oauth2" = "*"
+rest-social-auth = "*"
 
 [requires]
 python_version = "3.5"
