--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django = "*"
 djangorestframework = "*"
 python-decouple = "*"
 django-webpack-loader = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.5"
