--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,8 @@ django-webpack-loader = "*"
 django-rest-auth = "*"
 django-allauth = "*"
 "psycopg2" = "*"
+gunicorn = "*"
+django-heroku = "*"
 
 [requires]
-python_version = "3.5"
+python_version = "3.7"
