--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "gapi-client": "0.0.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "object-assign": "4.1.1",
@@ -39,6 +40,7 @@
     "react": "^16.4.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
+    "react-kawaii": "^0.6.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "recharts": "^1.2.0",
