--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
     "react": "^16.4.2",
+    "react-chat-popup": "^1.1.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
     "react-kawaii": "^0.6.0",
