--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ gunicorn = "*"
 django-heroku = "*"
 dj-database-url = "*"
 django-cors-headers = "*"
+"django-rest-framework-social-oauth2" = "*"
 
 [requires]
 python_version = "3.7"
