Added backend social auth (#21)
* social auth

* social auth

* done changes

* garbage removed

* applied changes

--- a/Pipfile
+++ b/Pipfile
@@ -12,13 +12,12 @@ django = "*"
 djangorestframework = "*"
 python-decouple = "*"
 django-webpack-loader = "*"
-django-rest-auth = "*"
-django-allauth = "*"
 "psycopg2" = "*"
 gunicorn = "*"
 django-heroku = "*"
 dj-database-url = "*"
 django-cors-headers = "*"
+"django-rest-framework-social-oauth2" = "*"
 
 [requires]
 python_version = "3.7"
