--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,7 +37,7 @@
     "promise": "8.0.1",
     "prop-types": "^15.6.2",
     "raf": "3.4.0",
-    "react": "^16.4.2",
+    "react": "16.4.2",
     "react-chat-popup": "^1.1.2",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.4.2",
