--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,47 @@
-Django==2.1
-django-rest-auth==0.9.3
-django-rest-framework==0.1.0
-django-webpack-loader==0.6.0
-djangorestframework==3.8.2
+astroid==2.0.4
+certifi==2018.10.15
+chardet==3.0.4
+coreapi==2.3.3
+coreschema==0.0.4
+defusedxml==0.5.0
+dj-database-url==0.5.0
+Django==2.1.3
 django-allauth==0.38.0
-python-decouple==3.1
+django-braces==1.13.0
+django-cors-headers==2.4.0
+django-heroku==0.3.1
+django-oauth-toolkit==1.2.0
+django-rest-auth==0.9.3
+django-rest-framework-social-oauth2==1.1.0
+django-webpack-loader==0.6.0
+djangorestframework==3.9.0
+gunicorn==19.9.0
+idna==2.7
+isort==4.3.4
+itypes==1.1.0
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+mccabe==0.6.1
+oauthlib==2.1.0
+pipenv==2018.10.13
 psycopg2==2.7.5
-pytz==2018.5
-gunicorn
+psycopg2-binary==2.7.5
+PyJWT==1.6.4
+pylint==2.1.1
+python-decouple==3.1
+python3-openid==3.1.0
+pytz==2018.7
+requests==2.20.0
+requests-oauthlib==1.0.0
 six==1.11.0
-ipython==7.0.1
-dj-database-url
-django-oauth-toolkit
-django-cors-headers
-social-auth-app-django
-django-rest-framework-social-oauth2
-django-coreapi
+social-auth-app-django==3.1.0
+social-auth-core==2.0.0
+uritemplate==3.0.0
+urllib3==1.24
+virtualenv==16.1.0
+virtualenv-clone==0.4.0
+wakatime==10.4.2
+whitenoise==4.1
+wrapt==1.10.11
+yapf==0.24.0
